Added pictures for landing page and made the user dashboard more responsive

--- a/css/landingstyle.css
+++ b/css/landingstyle.css
@@ -780,6 +780,7 @@ a {
 /* My styles */
 .hero .container{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   gap: 50px;
 }
